@@ -27,7 +27,7 @@ module RedCloth::Formatters
     alias_method :notextile, :ignore
     
     def redcloth_version(opts)
-      p(:text => "#{opts[:prefix]}#{RedCloth::VERSION::STRING}")
+      p(:text => "#{opts[:prefix]}#{RedCloth::VERSION}")
     end
 
     def inline_redcloth_version(opts)
